Set overflow: auto in StyleResolver::styleForDocument.

Without this, the call to setStyle in Document::updateStyle would temporarily
mark the LayoutView as overflow: visible.  With root layer scrolling this causes
PaintLayerScrollableArea to remove the scrollbars.

This change has no effect on the document's final overflow style, which comes
from inheritHtmlAndBodyElementStyles (and is never "visible" regardless of RLS).

BUG=672335

Review-Url: https://codereview.chromium.org/2571893003
Cr-Commit-Position: refs/heads/master@{#438533}

Former-commit-id: 0cc860d2c6075b9afb96f566a370f62972a758e0